# 3DPROG3_PROJECT

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  sources.txt
benchmark/: CMakeLists.txt
benchmark/src/: common.hpp  main.cpp  result_collection.hpp
libbenchdx11dc/: CMakeLists.txt
libbenchdx11dc/include/: bench_dx11dc.hpp
libbenchdx11dc/src/: bench_dx11dc.cpp
libbenchopengl/: CMakeLists.txt
libbenchopengl/include/: bench_opengl.hpp
libbenchopengl/src/: bench_opengl.cpp
libbenchvulkan/: CMakeLists.txt
libbenchvulkan/include/: bench_vulkan.hpp
libbenchvulkan/src/: bench_vulkan.cpp
libtemplate/: CMakeLists.txt
libtemplate/include/: bench_template.h  bench_template.hpp  common.hpp  result_collection.hpp
libtemplate/src/: bench_template.cpp  result_collection.cpp
output/: .gitignore
output/scripts/: Header.gp  drawCompare.gp  drawComparePipelines.gp  drawCompareTriangles.gp  initializeCompare.gp  makefile  shaderCompare.gp  stateChangeCompare.gp  triangleCompare.gp
res/: fragment.glsl  vertex.glsl
